// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AddCredentialModal should call onSubmit with the correct filtered data when "Save" is clicked: onSubmit, filtered data 1`] = `
{
  "cred_type": "network",
  "name": "Test Credential",
  "password": "<redacted>",
  "username": "demo",
}
`;

exports[`AddCredentialModal should render a basic component: basic 1`] = `
<Modal
  actions={[]}
  appendTo={[Function]}
  aria-describedby=""
  aria-label=""
  aria-labelledby=""
  className=""
  hasNoBodyWrapper={false}
  isOpen={true}
  onClose={[Function]}
  ouiaSafe={true}
  position="default"
  showClose={true}
  title="t([
  "view.credentials.modal-title.add",
  {
    "type": ""
  }
])"
  titleIconVariant={null}
  titleLabel=""
  variant="small"
>
  <CredentialForm
    onClearErrors={[Function]}
    onClose={[Function]}
    onSubmit={[Function]}
  />
</Modal>
`;

exports[`CredentialForm - secret input field should display optional secret for credential with that secret: optional-existing-filled 1`] = `
<Form>
  <FormGroup
    fieldId="name"
    isRequired={true}
    label="t([
  "view.credentials.add-modal.name.label"
])"
  >
    <TextInput
      id="credential-name"
      isRequired={true}
      name="name"
      onChange={[Function]}
      ouiaId="cred_name"
      placeholder="t([
  "view.credentials.add-modal.name.placeholder"
])"
      type="text"
      validated="default"
      value="Old credential name"
    />
    <ErrorFragment
      fieldTouched={false}
    />
  </FormGroup>
  <FormGroup
    fieldId="auth_type"
    label="t([
  "view.credentials.add-modal.auth_type.label"
])"
  >
    <SimpleDropdown
      dropdownItems={
        [
          {
            "item": "Username and Password",
            "ouiaId": "password",
          },
          {
            "item": "SSH Key",
            "ouiaId": "ssh_key",
          },
        ]
      }
      isFullWidth={true}
      label="SSH Key"
      menuToggleOuiaId="auth_type"
      onSelect={[Function]}
      variant="default"
    />
  </FormGroup>
  <React.Fragment>
    <FormGroup
      fieldId="username"
      isRequired={true}
      label="t([
  "view.credentials.add-modal.username.label"
])"
    >
      <TextInput
        id="credential-username"
        isRequired={false}
        name="username"
        onChange={[Function]}
        ouiaId="username"
        placeholder="t([
  "view.credentials.add-modal.username.placeholder"
])"
        validated="default"
        value="discovery"
      />
      <ErrorFragment
        fieldTouched={false}
      />
    </FormGroup>
    <FormGroup
      fieldId="ssh_key"
      isRequired={true}
      label="t([
  "view.credentials.add-modal.ssh_key.label"
])"
    >
      <TextArea
        data-ouia-component-id="ssh_key"
        id="credential-ssh-key"
        isRequired={false}
        name="ssh_key"
        onChange={[Function]}
        placeholder="****"
        rows={10}
        validated="default"
        value=""
      />
      <ErrorFragment
        fieldTouched={false}
      />
    </FormGroup>
    <FormGroup
      fieldId="ssh_passphrase"
      label="t([
  "view.credentials.add-modal.ssh_passphrase.label"
])"
    >
      <SecretInput
        hasSecret={true}
        id="ssh_passphrase"
        name="ssh_passphrase"
        onChange={[Function]}
        onEditBegin={[Function]}
        onUndo={[Function]}
        ouiaId="ssh_passphrase"
        placeholder="t([
  "view.credentials.add-modal.ssh_passphrase.placeholder"
])"
        validated="default"
        value=""
      />
      <ErrorFragment
        fieldTouched={false}
      />
    </FormGroup>
  </React.Fragment>
  <React.Fragment>
    <FormGroup
      fieldId="become_method"
      label="t([
  "view.credentials.add-modal.become_method.label"
])"
    >
      <SimpleDropdown
        dropdownItems={
          [
            {
              "item": "t([
  "view.credentials.add-modal.become_method.default_value"
])",
              "ouiaId": "default",
            },
            {
              "item": "sudo",
              "ouiaId": "sudo",
            },
            {
              "item": "su",
              "ouiaId": "su",
            },
            {
              "item": "pbrun",
              "ouiaId": "pbrun",
            },
            {
              "item": "pfexec",
              "ouiaId": "pfexec",
            },
            {
              "item": "doas",
              "ouiaId": "doas",
            },
            {
              "item": "dzdo",
              "ouiaId": "dzdo",
            },
            {
              "item": "ksu",
              "ouiaId": "ksu",
            },
            {
              "item": "runas",
              "ouiaId": "runas",
            },
          ]
        }
        isFullWidth={true}
        label="sudo"
        menuToggleOuiaId="become_method"
        onSelect={[Function]}
        variant="default"
      />
    </FormGroup>
    <FormGroup
      fieldId="become_user"
      label="t([
  "view.credentials.add-modal.become_user.label"
])"
    >
      <TextInput
        id="become_user"
        name="become_user"
        onChange={[Function]}
        ouiaId="become_user"
        placeholder="t([
  "view.credentials.add-modal.become_user.placeholder"
])"
        type="text"
        validated="default"
        value="root"
      />
      <ErrorFragment
        fieldTouched={false}
      />
    </FormGroup>
    <FormGroup
      fieldId="become_password"
      label="t([
  "view.credentials.add-modal.become_password.label"
])"
    >
      <SecretInput
        hasSecret={true}
        id="become_password"
        name="become_password"
        onChange={[Function]}
        onEditBegin={[Function]}
        onUndo={[Function]}
        ouiaId="become_password"
        placeholder="t([
  "view.credentials.add-modal.become_password.placeholder"
])"
        validated="default"
        value=""
      />
      <ErrorFragment
        fieldTouched={false}
      />
    </FormGroup>
  </React.Fragment>
  <ActionGroup>
    <Button
      isDisabled={false}
      onClick={[Function]}
      variant="primary"
    >
      t([
  "view.credentials.add-modal.actions.save"
])
    </Button>
    <Button
      onClick={[Function]}
      variant="link"
    >
      t([
  "view.credentials.add-modal.actions.cancel"
])
    </Button>
  </ActionGroup>
</Form>
`;

exports[`CredentialForm - secret input field should display optional secret for credential without that secret: optional-existing-not-filled 1`] = `
<Form>
  <FormGroup
    fieldId="name"
    isRequired={true}
    label="t([
  "view.credentials.add-modal.name.label"
])"
  >
    <TextInput
      id="credential-name"
      isRequired={true}
      name="name"
      onChange={[Function]}
      ouiaId="cred_name"
      placeholder="t([
  "view.credentials.add-modal.name.placeholder"
])"
      type="text"
      validated="default"
      value="Old credential name"
    />
    <ErrorFragment
      fieldTouched={false}
    />
  </FormGroup>
  <FormGroup
    fieldId="auth_type"
    label="t([
  "view.credentials.add-modal.auth_type.label"
])"
  >
    <SimpleDropdown
      dropdownItems={
        [
          {
            "item": "Username and Password",
            "ouiaId": "password",
          },
          {
            "item": "SSH Key",
            "ouiaId": "ssh_key",
          },
        ]
      }
      isFullWidth={true}
      label="Username and Password"
      menuToggleOuiaId="auth_type"
      onSelect={[Function]}
      variant="default"
    />
  </FormGroup>
  <React.Fragment>
    <FormGroup
      fieldId="username"
      isRequired={true}
      label="t([
  "view.credentials.add-modal.username.label"
])"
    >
      <TextInput
        id="credential-username"
        isRequired={false}
        name="username"
        onChange={[Function]}
        ouiaId="username"
        placeholder="t([
  "view.credentials.add-modal.username.placeholder"
])"
        validated="default"
        value="discovery"
      />
      <ErrorFragment
        fieldTouched={false}
      />
    </FormGroup>
    <FormGroup
      fieldId="password"
      isRequired={true}
      label="t([
  "view.credentials.add-modal.password.label"
])"
    >
      <SecretInput
        hasSecret={true}
        id="credential-password"
        isRequired={false}
        name="password"
        onChange={[Function]}
        onEditBegin={[Function]}
        onUndo={[Function]}
        ouiaId="password"
        placeholder="t([
  "view.credentials.add-modal.password.placeholder"
])"
        validated="default"
        value=""
      />
      <ErrorFragment
        fieldTouched={false}
      />
    </FormGroup>
  </React.Fragment>
  <React.Fragment>
    <FormGroup
      fieldId="become_method"
      label="t([
  "view.credentials.add-modal.become_method.label"
])"
    >
      <SimpleDropdown
        dropdownItems={
          [
            {
              "item": "t([
  "view.credentials.add-modal.become_method.default_value"
])",
              "ouiaId": "default",
            },
            {
              "item": "sudo",
              "ouiaId": "sudo",
            },
            {
              "item": "su",
              "ouiaId": "su",
            },
            {
              "item": "pbrun",
              "ouiaId": "pbrun",
            },
            {
              "item": "pfexec",
              "ouiaId": "pfexec",
            },
            {
              "item": "doas",
              "ouiaId": "doas",
            },
            {
              "item": "dzdo",
              "ouiaId": "dzdo",
            },
            {
              "item": "ksu",
              "ouiaId": "ksu",
            },
            {
              "item": "runas",
              "ouiaId": "runas",
            },
          ]
        }
        isFullWidth={true}
        label="sudo"
        menuToggleOuiaId="become_method"
        onSelect={[Function]}
        variant="default"
      />
    </FormGroup>
    <FormGroup
      fieldId="become_user"
      label="t([
  "view.credentials.add-modal.become_user.label"
])"
    >
      <TextInput
        id="become_user"
        name="become_user"
        onChange={[Function]}
        ouiaId="become_user"
        placeholder="t([
  "view.credentials.add-modal.become_user.placeholder"
])"
        type="text"
        validated="default"
        value="root"
      />
      <ErrorFragment
        fieldTouched={false}
      />
    </FormGroup>
    <FormGroup
      fieldId="become_password"
      label="t([
  "view.credentials.add-modal.become_password.label"
])"
    >
      <SecretInput
        hasSecret={false}
        id="become_password"
        name="become_password"
        onChange={[Function]}
        onEditBegin={[Function]}
        onUndo={[Function]}
        ouiaId="become_password"
        placeholder="t([
  "view.credentials.add-modal.become_password.placeholder"
])"
        validated="default"
        value=""
      />
      <ErrorFragment
        fieldTouched={false}
      />
    </FormGroup>
  </React.Fragment>
  <ActionGroup>
    <Button
      isDisabled={false}
      onClick={[Function]}
      variant="primary"
    >
      t([
  "view.credentials.add-modal.actions.save"
])
    </Button>
    <Button
      onClick={[Function]}
      variant="link"
    >
      t([
  "view.credentials.add-modal.actions.cancel"
])
    </Button>
  </ActionGroup>
</Form>
`;

exports[`CredentialForm should call handlers for handleInputChange - SSH Key: handleInputChange 1`] = `
[
  [
    "username",
    "d",
  ],
  [
    "username",
    "i",
  ],
  [
    "username",
    "s",
  ],
  [
    "username",
    "c",
  ],
  [
    "username",
    "o",
  ],
  [
    "username",
    "v",
  ],
  [
    "username",
    "e",
  ],
  [
    "username",
    "r",
  ],
  [
    "username",
    "y",
  ],
  [
    "ssh_key",
    "s",
  ],
  [
    "ssh_key",
    "ss",
  ],
  [
    "ssh_key",
    "ssh",
  ],
  [
    "ssh_key",
    "ssh ",
  ],
  [
    "ssh_key",
    "ssh k",
  ],
  [
    "ssh_key",
    "ssh ke",
  ],
  [
    "ssh_key",
    "ssh key",
  ],
  [
    "ssh_key",
    "ssh key ",
  ],
  [
    "ssh_key",
    "ssh key f",
  ],
  [
    "ssh_key",
    "ssh key fi",
  ],
  [
    "ssh_key",
    "ssh key fil",
  ],
  [
    "ssh_key",
    "ssh key file",
  ],
  [
    "ssh_key",
    "ssh key file ",
  ],
  [
    "ssh_key",
    "ssh key file c",
  ],
  [
    "ssh_key",
    "ssh key file co",
  ],
  [
    "ssh_key",
    "ssh key file con",
  ],
  [
    "ssh_key",
    "ssh key file cont",
  ],
  [
    "ssh_key",
    "ssh key file conte",
  ],
  [
    "ssh_key",
    "ssh key file conten",
  ],
  [
    "ssh_key",
    "ssh key file content",
  ],
  [
    "ssh_passphrase",
    "s",
  ],
  [
    "ssh_passphrase",
    "se",
  ],
  [
    "ssh_passphrase",
    "sec",
  ],
  [
    "ssh_passphrase",
    "secr",
  ],
  [
    "ssh_passphrase",
    "secre",
  ],
  [
    "ssh_passphrase",
    "secret",
  ],
  [
    "ssh_passphrase",
    "secret!",
  ],
]
`;

exports[`CredentialForm should call handlers for setAuthType and handleInputChange - Token: handleInputChange 1`] = `
[
  [
    "auth_token",
    "s",
  ],
  [
    "auth_token",
    "u",
  ],
  [
    "auth_token",
    "p",
  ],
  [
    "auth_token",
    "e",
  ],
  [
    "auth_token",
    "r",
  ],
  [
    "auth_token",
    " ",
  ],
  [
    "auth_token",
    "s",
  ],
  [
    "auth_token",
    "e",
  ],
  [
    "auth_token",
    "c",
  ],
  [
    "auth_token",
    "r",
  ],
  [
    "auth_token",
    "e",
  ],
  [
    "auth_token",
    "t",
  ],
  [
    "auth_token",
    " ",
  ],
  [
    "auth_token",
    "A",
  ],
  [
    "auth_token",
    "P",
  ],
  [
    "auth_token",
    "I",
  ],
  [
    "auth_token",
    " ",
  ],
  [
    "auth_token",
    "t",
  ],
  [
    "auth_token",
    "o",
  ],
  [
    "auth_token",
    "k",
  ],
  [
    "auth_token",
    "e",
  ],
  [
    "auth_token",
    "n",
  ],
]
`;

exports[`CredentialForm should call handlers for setAuthType and handleInputChange - Username and Password: handleInputChange 1`] = `
[
  [
    "username",
    "d",
  ],
  [
    "username",
    "i",
  ],
  [
    "username",
    "s",
  ],
  [
    "username",
    "c",
  ],
  [
    "username",
    "o",
  ],
  [
    "username",
    "v",
  ],
  [
    "username",
    "e",
  ],
  [
    "username",
    "r",
  ],
  [
    "username",
    "y",
  ],
  [
    "password",
    "s",
  ],
  [
    "password",
    "e",
  ],
  [
    "password",
    "c",
  ],
  [
    "password",
    "r",
  ],
  [
    "password",
    "e",
  ],
  [
    "password",
    "t",
  ],
  [
    "password",
    "!",
  ],
  [
    "become_method",
    "sudo",
  ],
  [
    "become_user",
    "r",
  ],
  [
    "become_user",
    "ro",
  ],
  [
    "become_user",
    "roo",
  ],
  [
    "become_user",
    "root",
  ],
  [
    "become_password",
    "s",
  ],
  [
    "become_password",
    "se",
  ],
  [
    "become_password",
    "sec",
  ],
  [
    "become_password",
    "secu",
  ],
  [
    "become_password",
    "secur",
  ],
  [
    "become_password",
    "secure",
  ],
  [
    "become_password",
    "secure ",
  ],
  [
    "become_password",
    "secure s",
  ],
  [
    "become_password",
    "secure se",
  ],
  [
    "become_password",
    "secure sec",
  ],
  [
    "become_password",
    "secure secr",
  ],
  [
    "become_password",
    "secure secre",
  ],
  [
    "become_password",
    "secure secret",
  ],
  [
    "become_password",
    "secure secret!",
  ],
]
`;

exports[`CredentialForm should call handlers for setAuthType and handleInputChange - Username and Password: setAuthType 1`] = `
[
  [
    "SSH Key",
  ],
]
`;

exports[`CredentialForm should render a basic component: basic 1`] = `
<Form>
  <FormGroup
    fieldId="name"
    isRequired={true}
    label="t([
  "view.credentials.add-modal.name.label"
])"
  >
    <TextInput
      id="credential-name"
      isRequired={true}
      name="name"
      onChange={[Function]}
      ouiaId="cred_name"
      placeholder="t([
  "view.credentials.add-modal.name.placeholder"
])"
      type="text"
      validated="default"
      value=""
    />
    <ErrorFragment
      fieldTouched={false}
    />
  </FormGroup>
  <FormGroup
    fieldId="auth_type"
    label="t([
  "view.credentials.add-modal.auth_type.label"
])"
  >
    <SimpleDropdown
      dropdownItems={
        [
          {
            "item": "Username and Password",
            "ouiaId": "password",
          },
          {
            "item": "SSH Key",
            "ouiaId": "ssh_key",
          },
        ]
      }
      isFullWidth={true}
      label="Username and Password"
      menuToggleOuiaId="auth_type"
      onSelect={[Function]}
      variant="default"
    />
  </FormGroup>
  <React.Fragment>
    <FormGroup
      fieldId="username"
      isRequired={true}
      label="t([
  "view.credentials.add-modal.username.label"
])"
    >
      <TextInput
        id="credential-username"
        isRequired={true}
        name="username"
        onChange={[Function]}
        ouiaId="username"
        placeholder="t([
  "view.credentials.add-modal.username.placeholder"
])"
        validated="default"
        value=""
      />
      <ErrorFragment
        fieldTouched={false}
      />
    </FormGroup>
    <FormGroup
      fieldId="password"
      isRequired={true}
      label="t([
  "view.credentials.add-modal.password.label"
])"
    >
      <SecretInput
        id="credential-password"
        isRequired={true}
        name="password"
        onChange={[Function]}
        onEditBegin={[Function]}
        onUndo={[Function]}
        ouiaId="password"
        placeholder="t([
  "view.credentials.add-modal.password.placeholder"
])"
        validated="default"
        value=""
      />
      <ErrorFragment
        fieldTouched={false}
      />
    </FormGroup>
  </React.Fragment>
  <React.Fragment>
    <FormGroup
      fieldId="become_method"
      label="t([
  "view.credentials.add-modal.become_method.label"
])"
    >
      <SimpleDropdown
        dropdownItems={
          [
            {
              "item": "t([
  "view.credentials.add-modal.become_method.default_value"
])",
              "ouiaId": "default",
            },
            {
              "item": "sudo",
              "ouiaId": "sudo",
            },
            {
              "item": "su",
              "ouiaId": "su",
            },
            {
              "item": "pbrun",
              "ouiaId": "pbrun",
            },
            {
              "item": "pfexec",
              "ouiaId": "pfexec",
            },
            {
              "item": "doas",
              "ouiaId": "doas",
            },
            {
              "item": "dzdo",
              "ouiaId": "dzdo",
            },
            {
              "item": "ksu",
              "ouiaId": "ksu",
            },
            {
              "item": "runas",
              "ouiaId": "runas",
            },
          ]
        }
        isFullWidth={true}
        label="t([
  "view.credentials.add-modal.become_method.default_value"
])"
        menuToggleOuiaId="become_method"
        onSelect={[Function]}
        variant="default"
      />
    </FormGroup>
    <FormGroup
      fieldId="become_user"
      label="t([
  "view.credentials.add-modal.become_user.label"
])"
    >
      <TextInput
        id="become_user"
        name="become_user"
        onChange={[Function]}
        ouiaId="become_user"
        placeholder="t([
  "view.credentials.add-modal.become_user.placeholder"
])"
        type="text"
        validated="default"
      />
      <ErrorFragment
        fieldTouched={false}
      />
    </FormGroup>
    <FormGroup
      fieldId="become_password"
      label="t([
  "view.credentials.add-modal.become_password.label"
])"
    >
      <SecretInput
        id="become_password"
        name="become_password"
        onChange={[Function]}
        onEditBegin={[Function]}
        onUndo={[Function]}
        ouiaId="become_password"
        placeholder="t([
  "view.credentials.add-modal.become_password.placeholder"
])"
        validated="default"
      />
      <ErrorFragment
        fieldTouched={false}
      />
    </FormGroup>
  </React.Fragment>
  <ActionGroup>
    <Button
      isDisabled={true}
      onClick={[Function]}
      variant="primary"
    >
      t([
  "view.credentials.add-modal.actions.save"
])
    </Button>
    <Button
      onClick={[Function]}
      variant="link"
    >
      t([
  "view.credentials.add-modal.actions.cancel"
])
    </Button>
  </ActionGroup>
</Form>
`;

exports[`CredentialForm should render form to different cred types appropriately: ansible, "Username and Password" 1`] = `
<Form>
  <FormGroup
    fieldId="name"
    isRequired={true}
    label="t([
  "view.credentials.add-modal.name.label"
])"
  >
    <TextInput
      id="credential-name"
      isRequired={true}
      name="name"
      onChange={[Function]}
      ouiaId="cred_name"
      placeholder="t([
  "view.credentials.add-modal.name.placeholder"
])"
      type="text"
      validated="default"
      value=""
    />
    <ErrorFragment
      fieldTouched={false}
    />
  </FormGroup>
  <FormGroup
    fieldId="auth_type"
    label="t([
  "view.credentials.add-modal.auth_type.label"
])"
  >
    <SimpleDropdown
      dropdownItems={
        [
          {
            "item": "Username and Password",
            "ouiaId": "password",
          },
          {
            "disabledTooltip": undefined,
            "isDisabled": false,
            "item": "Vault secret path",
            "ouiaId": "vault_secret_path",
          },
        ]
      }
      isFullWidth={true}
      label="Username and Password"
      menuToggleOuiaId="auth_type"
      onSelect={[Function]}
      variant="default"
    />
  </FormGroup>
  <React.Fragment>
    <FormGroup
      fieldId="username"
      isRequired={true}
      label="t([
  "view.credentials.add-modal.username.label"
])"
    >
      <TextInput
        id="credential-username"
        isRequired={true}
        name="username"
        onChange={[Function]}
        ouiaId="username"
        placeholder="t([
  "view.credentials.add-modal.username.placeholder"
])"
        validated="default"
        value=""
      />
      <ErrorFragment
        fieldTouched={false}
      />
    </FormGroup>
    <FormGroup
      fieldId="password"
      isRequired={true}
      label="t([
  "view.credentials.add-modal.password.label"
])"
    >
      <SecretInput
        id="credential-password"
        isRequired={true}
        name="password"
        onChange={[Function]}
        onEditBegin={[Function]}
        onUndo={[Function]}
        ouiaId="password"
        placeholder="t([
  "view.credentials.add-modal.password.placeholder"
])"
        validated="default"
        value=""
      />
      <ErrorFragment
        fieldTouched={false}
      />
    </FormGroup>
  </React.Fragment>
  <ActionGroup>
    <Button
      isDisabled={true}
      onClick={[Function]}
      variant="primary"
    >
      t([
  "view.credentials.add-modal.actions.save"
])
    </Button>
    <Button
      onClick={[Function]}
      variant="link"
    >
      t([
  "view.credentials.add-modal.actions.cancel"
])
    </Button>
  </ActionGroup>
</Form>
`;

exports[`CredentialForm should render form to different cred types appropriately: satellite, "Username and Password" 1`] = `
<Form>
  <FormGroup
    fieldId="name"
    isRequired={true}
    label="t([
  "view.credentials.add-modal.name.label"
])"
  >
    <TextInput
      id="credential-name"
      isRequired={true}
      name="name"
      onChange={[Function]}
      ouiaId="cred_name"
      placeholder="t([
  "view.credentials.add-modal.name.placeholder"
])"
      type="text"
      validated="default"
      value=""
    />
    <ErrorFragment
      fieldTouched={false}
    />
  </FormGroup>
  <React.Fragment>
    <FormGroup
      fieldId="username"
      isRequired={true}
      label="t([
  "view.credentials.add-modal.username.label"
])"
    >
      <TextInput
        id="credential-username"
        isRequired={true}
        name="username"
        onChange={[Function]}
        ouiaId="username"
        placeholder="t([
  "view.credentials.add-modal.username.placeholder"
])"
        validated="default"
        value=""
      />
      <ErrorFragment
        fieldTouched={false}
      />
    </FormGroup>
    <FormGroup
      fieldId="password"
      isRequired={true}
      label="t([
  "view.credentials.add-modal.password.label"
])"
    >
      <SecretInput
        id="credential-password"
        isRequired={true}
        name="password"
        onChange={[Function]}
        onEditBegin={[Function]}
        onUndo={[Function]}
        ouiaId="password"
        placeholder="t([
  "view.credentials.add-modal.password.placeholder"
])"
        validated="default"
        value=""
      />
      <ErrorFragment
        fieldTouched={false}
      />
    </FormGroup>
  </React.Fragment>
  <ActionGroup>
    <Button
      isDisabled={true}
      onClick={[Function]}
      variant="primary"
    >
      t([
  "view.credentials.add-modal.actions.save"
])
    </Button>
    <Button
      onClick={[Function]}
      variant="link"
    >
      t([
  "view.credentials.add-modal.actions.cancel"
])
    </Button>
  </ActionGroup>
</Form>
`;

exports[`CredentialForm should render form to different cred types appropriately: vcenter, "Username and Password" 1`] = `
<Form>
  <FormGroup
    fieldId="name"
    isRequired={true}
    label="t([
  "view.credentials.add-modal.name.label"
])"
  >
    <TextInput
      id="credential-name"
      isRequired={true}
      name="name"
      onChange={[Function]}
      ouiaId="cred_name"
      placeholder="t([
  "view.credentials.add-modal.name.placeholder"
])"
      type="text"
      validated="default"
      value=""
    />
    <ErrorFragment
      fieldTouched={false}
    />
  </FormGroup>
  <React.Fragment>
    <FormGroup
      fieldId="username"
      isRequired={true}
      label="t([
  "view.credentials.add-modal.username.label"
])"
    >
      <TextInput
        id="credential-username"
        isRequired={true}
        name="username"
        onChange={[Function]}
        ouiaId="username"
        placeholder="t([
  "view.credentials.add-modal.username.placeholder"
])"
        validated="default"
        value=""
      />
      <ErrorFragment
        fieldTouched={false}
      />
    </FormGroup>
    <FormGroup
      fieldId="password"
      isRequired={true}
      label="t([
  "view.credentials.add-modal.password.label"
])"
    >
      <SecretInput
        id="credential-password"
        isRequired={true}
        name="password"
        onChange={[Function]}
        onEditBegin={[Function]}
        onUndo={[Function]}
        ouiaId="password"
        placeholder="t([
  "view.credentials.add-modal.password.placeholder"
])"
        validated="default"
        value=""
      />
      <ErrorFragment
        fieldTouched={false}
      />
    </FormGroup>
  </React.Fragment>
  <ActionGroup>
    <Button
      isDisabled={true}
      onClick={[Function]}
      variant="primary"
    >
      t([
  "view.credentials.add-modal.actions.save"
])
    </Button>
    <Button
      onClick={[Function]}
      variant="link"
    >
      t([
  "view.credentials.add-modal.actions.cancel"
])
    </Button>
  </ActionGroup>
</Form>
`;

exports[`CredentialForm should render form to rhacs appropriately: rhacs, "Token" 1`] = `
<Form>
  <FormGroup
    fieldId="name"
    isRequired={true}
    label="t([
  "view.credentials.add-modal.name.label"
])"
  >
    <TextInput
      id="credential-name"
      isRequired={true}
      name="name"
      onChange={[Function]}
      ouiaId="cred_name"
      placeholder="t([
  "view.credentials.add-modal.name.placeholder"
])"
      type="text"
      validated="default"
      value=""
    />
    <ErrorFragment
      fieldTouched={false}
    />
  </FormGroup>
  <FormGroup
    fieldId="auth_token"
    isRequired={true}
    label="t([
  "view.credentials.add-modal.token.label"
])"
  >
    <SecretInput
      id="credential-token"
      isRequired={true}
      name="auth_token"
      onChange={[Function]}
      onEditBegin={[Function]}
      onUndo={[Function]}
      ouiaId="auth_token"
      placeholder="t([
  "view.credentials.add-modal.token.placeholder"
])"
      validated="default"
      value=""
    />
    <ErrorFragment
      fieldTouched={false}
    />
  </FormGroup>
  <ActionGroup>
    <Button
      isDisabled={true}
      onClick={[Function]}
      variant="primary"
    >
      t([
  "view.credentials.add-modal.actions.save"
])
    </Button>
    <Button
      onClick={[Function]}
      variant="link"
    >
      t([
  "view.credentials.add-modal.actions.cancel"
])
    </Button>
  </ActionGroup>
</Form>
`;

exports[`CredentialForm should render specific to authType for type network: network, SSH Key 1`] = `
<Form>
  <FormGroup
    fieldId="name"
    isRequired={true}
    label="t([
  "view.credentials.add-modal.name.label"
])"
  >
    <TextInput
      id="credential-name"
      isRequired={true}
      name="name"
      onChange={[Function]}
      ouiaId="cred_name"
      placeholder="t([
  "view.credentials.add-modal.name.placeholder"
])"
      type="text"
      validated="default"
    />
    <ErrorFragment
      fieldTouched={false}
    />
  </FormGroup>
  <FormGroup
    fieldId="auth_type"
    label="t([
  "view.credentials.add-modal.auth_type.label"
])"
  >
    <SimpleDropdown
      dropdownItems={
        [
          {
            "item": "Username and Password",
            "ouiaId": "password",
          },
          {
            "item": "SSH Key",
            "ouiaId": "ssh_key",
          },
        ]
      }
      isFullWidth={true}
      label="SSH Key"
      menuToggleOuiaId="auth_type"
      onSelect={[Function]}
      variant="default"
    />
  </FormGroup>
  <React.Fragment>
    <FormGroup
      fieldId="username"
      isRequired={true}
      label="t([
  "view.credentials.add-modal.username.label"
])"
    >
      <TextInput
        id="credential-username"
        isRequired={true}
        name="username"
        onChange={[Function]}
        ouiaId="username"
        placeholder="t([
  "view.credentials.add-modal.username.placeholder"
])"
        validated="default"
      />
      <ErrorFragment
        fieldTouched={false}
      />
    </FormGroup>
    <FormGroup
      fieldId="ssh_key"
      isRequired={true}
      label="t([
  "view.credentials.add-modal.ssh_key.label"
])"
    >
      <TextArea
        data-ouia-component-id="ssh_key"
        id="credential-ssh-key"
        isRequired={true}
        name="ssh_key"
        onChange={[Function]}
        placeholder="t([
  "view.credentials.add-modal.ssh_key.placeholder"
])"
        rows={10}
        validated="default"
      />
      <ErrorFragment
        fieldTouched={false}
      />
    </FormGroup>
    <FormGroup
      fieldId="ssh_passphrase"
      label="t([
  "view.credentials.add-modal.ssh_passphrase.label"
])"
    >
      <SecretInput
        id="ssh_passphrase"
        name="ssh_passphrase"
        onChange={[Function]}
        onEditBegin={[Function]}
        onUndo={[Function]}
        ouiaId="ssh_passphrase"
        placeholder="t([
  "view.credentials.add-modal.ssh_passphrase.placeholder"
])"
        validated="default"
      />
      <ErrorFragment
        fieldTouched={false}
      />
    </FormGroup>
  </React.Fragment>
  <React.Fragment>
    <FormGroup
      fieldId="become_method"
      label="t([
  "view.credentials.add-modal.become_method.label"
])"
    >
      <SimpleDropdown
        dropdownItems={
          [
            {
              "item": "t([
  "view.credentials.add-modal.become_method.default_value"
])",
              "ouiaId": "default",
            },
            {
              "item": "sudo",
              "ouiaId": "sudo",
            },
            {
              "item": "su",
              "ouiaId": "su",
            },
            {
              "item": "pbrun",
              "ouiaId": "pbrun",
            },
            {
              "item": "pfexec",
              "ouiaId": "pfexec",
            },
            {
              "item": "doas",
              "ouiaId": "doas",
            },
            {
              "item": "dzdo",
              "ouiaId": "dzdo",
            },
            {
              "item": "ksu",
              "ouiaId": "ksu",
            },
            {
              "item": "runas",
              "ouiaId": "runas",
            },
          ]
        }
        isFullWidth={true}
        label="t([
  "view.credentials.add-modal.become_method.default_value"
])"
        menuToggleOuiaId="become_method"
        onSelect={[Function]}
        variant="default"
      />
    </FormGroup>
    <FormGroup
      fieldId="become_user"
      label="t([
  "view.credentials.add-modal.become_user.label"
])"
    >
      <TextInput
        id="become_user"
        name="become_user"
        onChange={[Function]}
        ouiaId="become_user"
        placeholder="t([
  "view.credentials.add-modal.become_user.placeholder"
])"
        type="text"
        validated="default"
      />
      <ErrorFragment
        fieldTouched={false}
      />
    </FormGroup>
    <FormGroup
      fieldId="become_password"
      label="t([
  "view.credentials.add-modal.become_password.label"
])"
    >
      <SecretInput
        id="become_password"
        name="become_password"
        onChange={[Function]}
        onEditBegin={[Function]}
        onUndo={[Function]}
        ouiaId="become_password"
        placeholder="t([
  "view.credentials.add-modal.become_password.placeholder"
])"
        validated="default"
      />
      <ErrorFragment
        fieldTouched={false}
      />
    </FormGroup>
  </React.Fragment>
  <ActionGroup>
    <Button
      isDisabled={true}
      onClick={[Function]}
      variant="primary"
    >
      t([
  "view.credentials.add-modal.actions.save"
])
    </Button>
    <Button
      onClick={[Function]}
      variant="link"
    >
      t([
  "view.credentials.add-modal.actions.cancel"
])
    </Button>
  </ActionGroup>
</Form>
`;

exports[`CredentialForm should render specific to authType for type network: network, Username and Password 1`] = `
<Form>
  <FormGroup
    fieldId="name"
    isRequired={true}
    label="t([
  "view.credentials.add-modal.name.label"
])"
  >
    <TextInput
      id="credential-name"
      isRequired={true}
      name="name"
      onChange={[Function]}
      ouiaId="cred_name"
      placeholder="t([
  "view.credentials.add-modal.name.placeholder"
])"
      type="text"
      validated="default"
    />
    <ErrorFragment
      fieldTouched={false}
    />
  </FormGroup>
  <FormGroup
    fieldId="auth_type"
    label="t([
  "view.credentials.add-modal.auth_type.label"
])"
  >
    <SimpleDropdown
      dropdownItems={
        [
          {
            "item": "Username and Password",
            "ouiaId": "password",
          },
          {
            "item": "SSH Key",
            "ouiaId": "ssh_key",
          },
        ]
      }
      isFullWidth={true}
      label="Username and Password"
      menuToggleOuiaId="auth_type"
      onSelect={[Function]}
      variant="default"
    />
  </FormGroup>
  <React.Fragment>
    <FormGroup
      fieldId="username"
      isRequired={true}
      label="t([
  "view.credentials.add-modal.username.label"
])"
    >
      <TextInput
        id="credential-username"
        isRequired={true}
        name="username"
        onChange={[Function]}
        ouiaId="username"
        placeholder="t([
  "view.credentials.add-modal.username.placeholder"
])"
        validated="default"
      />
      <ErrorFragment
        fieldTouched={false}
      />
    </FormGroup>
    <FormGroup
      fieldId="password"
      isRequired={true}
      label="t([
  "view.credentials.add-modal.password.label"
])"
    >
      <SecretInput
        id="credential-password"
        isRequired={true}
        name="password"
        onChange={[Function]}
        onEditBegin={[Function]}
        onUndo={[Function]}
        ouiaId="password"
        placeholder="t([
  "view.credentials.add-modal.password.placeholder"
])"
        validated="default"
      />
      <ErrorFragment
        fieldTouched={false}
      />
    </FormGroup>
  </React.Fragment>
  <React.Fragment>
    <FormGroup
      fieldId="become_method"
      label="t([
  "view.credentials.add-modal.become_method.label"
])"
    >
      <SimpleDropdown
        dropdownItems={
          [
            {
              "item": "t([
  "view.credentials.add-modal.become_method.default_value"
])",
              "ouiaId": "default",
            },
            {
              "item": "sudo",
              "ouiaId": "sudo",
            },
            {
              "item": "su",
              "ouiaId": "su",
            },
            {
              "item": "pbrun",
              "ouiaId": "pbrun",
            },
            {
              "item": "pfexec",
              "ouiaId": "pfexec",
            },
            {
              "item": "doas",
              "ouiaId": "doas",
            },
            {
              "item": "dzdo",
              "ouiaId": "dzdo",
            },
            {
              "item": "ksu",
              "ouiaId": "ksu",
            },
            {
              "item": "runas",
              "ouiaId": "runas",
            },
          ]
        }
        isFullWidth={true}
        label="t([
  "view.credentials.add-modal.become_method.default_value"
])"
        menuToggleOuiaId="become_method"
        onSelect={[Function]}
        variant="default"
      />
    </FormGroup>
    <FormGroup
      fieldId="become_user"
      label="t([
  "view.credentials.add-modal.become_user.label"
])"
    >
      <TextInput
        id="become_user"
        name="become_user"
        onChange={[Function]}
        ouiaId="become_user"
        placeholder="t([
  "view.credentials.add-modal.become_user.placeholder"
])"
        type="text"
        validated="default"
      />
      <ErrorFragment
        fieldTouched={false}
      />
    </FormGroup>
    <FormGroup
      fieldId="become_password"
      label="t([
  "view.credentials.add-modal.become_password.label"
])"
    >
      <SecretInput
        id="become_password"
        name="become_password"
        onChange={[Function]}
        onEditBegin={[Function]}
        onUndo={[Function]}
        ouiaId="become_password"
        placeholder="t([
  "view.credentials.add-modal.become_password.placeholder"
])"
        validated="default"
      />
      <ErrorFragment
        fieldTouched={false}
      />
    </FormGroup>
  </React.Fragment>
  <ActionGroup>
    <Button
      isDisabled={true}
      onClick={[Function]}
      variant="primary"
    >
      t([
  "view.credentials.add-modal.actions.save"
])
    </Button>
    <Button
      onClick={[Function]}
      variant="link"
    >
      t([
  "view.credentials.add-modal.actions.cancel"
])
    </Button>
  </ActionGroup>
</Form>
`;

exports[`CredentialForm should render specific to authType for type openshift: openshift, "Token" 1`] = `
<Form>
  <FormGroup
    fieldId="name"
    isRequired={true}
    label="t([
  "view.credentials.add-modal.name.label"
])"
  >
    <TextInput
      id="credential-name"
      isRequired={true}
      name="name"
      onChange={[Function]}
      ouiaId="cred_name"
      placeholder="t([
  "view.credentials.add-modal.name.placeholder"
])"
      type="text"
      validated="default"
    />
    <ErrorFragment
      fieldTouched={false}
    />
  </FormGroup>
  <FormGroup
    fieldId="auth_type"
    label="t([
  "view.credentials.add-modal.auth_type.label"
])"
  >
    <SimpleDropdown
      dropdownItems={
        [
          {
            "item": "Token",
            "ouiaId": "auth_token",
          },
          {
            "item": "Username and Password",
            "ouiaId": "password",
          },
          {
            "disabledTooltip": undefined,
            "isDisabled": false,
            "item": "Vault secret path",
            "ouiaId": "vault_secret_path",
          },
        ]
      }
      isFullWidth={true}
      label="Token"
      menuToggleOuiaId="auth_type"
      onSelect={[Function]}
      variant="default"
    />
  </FormGroup>
  <FormGroup
    fieldId="auth_token"
    isRequired={true}
    label="t([
  "view.credentials.add-modal.token.label"
])"
  >
    <SecretInput
      id="credential-token"
      isRequired={true}
      name="auth_token"
      onChange={[Function]}
      onEditBegin={[Function]}
      onUndo={[Function]}
      ouiaId="auth_token"
      placeholder="t([
  "view.credentials.add-modal.token.placeholder"
])"
      validated="default"
    />
    <ErrorFragment
      fieldTouched={false}
    />
  </FormGroup>
  <ActionGroup>
    <Button
      isDisabled={true}
      onClick={[Function]}
      variant="primary"
    >
      t([
  "view.credentials.add-modal.actions.save"
])
    </Button>
    <Button
      onClick={[Function]}
      variant="link"
    >
      t([
  "view.credentials.add-modal.actions.cancel"
])
    </Button>
  </ActionGroup>
</Form>
`;

exports[`CredentialForm should render specific to authType for type openshift: openshift, "Username and Password" 1`] = `
<Form>
  <FormGroup
    fieldId="name"
    isRequired={true}
    label="t([
  "view.credentials.add-modal.name.label"
])"
  >
    <TextInput
      id="credential-name"
      isRequired={true}
      name="name"
      onChange={[Function]}
      ouiaId="cred_name"
      placeholder="t([
  "view.credentials.add-modal.name.placeholder"
])"
      type="text"
      validated="default"
    />
    <ErrorFragment
      fieldTouched={false}
    />
  </FormGroup>
  <FormGroup
    fieldId="auth_type"
    label="t([
  "view.credentials.add-modal.auth_type.label"
])"
  >
    <SimpleDropdown
      dropdownItems={
        [
          {
            "item": "Token",
            "ouiaId": "auth_token",
          },
          {
            "item": "Username and Password",
            "ouiaId": "password",
          },
          {
            "disabledTooltip": undefined,
            "isDisabled": false,
            "item": "Vault secret path",
            "ouiaId": "vault_secret_path",
          },
        ]
      }
      isFullWidth={true}
      label="Username and Password"
      menuToggleOuiaId="auth_type"
      onSelect={[Function]}
      variant="default"
    />
  </FormGroup>
  <React.Fragment>
    <FormGroup
      fieldId="username"
      isRequired={true}
      label="t([
  "view.credentials.add-modal.username.label"
])"
    >
      <TextInput
        id="credential-username"
        isRequired={true}
        name="username"
        onChange={[Function]}
        ouiaId="username"
        placeholder="t([
  "view.credentials.add-modal.username.placeholder"
])"
        validated="default"
      />
      <ErrorFragment
        fieldTouched={false}
      />
    </FormGroup>
    <FormGroup
      fieldId="password"
      isRequired={true}
      label="t([
  "view.credentials.add-modal.password.label"
])"
    >
      <SecretInput
        id="credential-password"
        isRequired={true}
        name="password"
        onChange={[Function]}
        onEditBegin={[Function]}
        onUndo={[Function]}
        ouiaId="password"
        placeholder="t([
  "view.credentials.add-modal.password.placeholder"
])"
        validated="default"
      />
      <ErrorFragment
        fieldTouched={false}
      />
    </FormGroup>
  </React.Fragment>
  <ActionGroup>
    <Button
      isDisabled={true}
      onClick={[Function]}
      variant="primary"
    >
      t([
  "view.credentials.add-modal.actions.save"
])
    </Button>
    <Button
      onClick={[Function]}
      variant="link"
    >
      t([
  "view.credentials.add-modal.actions.cancel"
])
    </Button>
  </ActionGroup>
</Form>
`;

exports[`CredentialForm should render specific to authType for type openshift: openshift, "Vault secret path" 1`] = `
<Form>
  <FormGroup
    fieldId="name"
    isRequired={true}
    label="t([
  "view.credentials.add-modal.name.label"
])"
  >
    <TextInput
      id="credential-name"
      isRequired={true}
      name="name"
      onChange={[Function]}
      ouiaId="cred_name"
      placeholder="t([
  "view.credentials.add-modal.name.placeholder"
])"
      type="text"
      validated="default"
    />
    <ErrorFragment
      fieldTouched={false}
    />
  </FormGroup>
  <FormGroup
    fieldId="auth_type"
    label="t([
  "view.credentials.add-modal.auth_type.label"
])"
  >
    <SimpleDropdown
      dropdownItems={
        [
          {
            "item": "Token",
            "ouiaId": "auth_token",
          },
          {
            "item": "Username and Password",
            "ouiaId": "password",
          },
          {
            "disabledTooltip": undefined,
            "isDisabled": false,
            "item": "Vault secret path",
            "ouiaId": "vault_secret_path",
          },
        ]
      }
      isFullWidth={true}
      label="Vault secret path"
      menuToggleOuiaId="auth_type"
      onSelect={[Function]}
      variant="default"
    />
  </FormGroup>
  <React.Fragment>
    <FormGroup
      fieldId="vault_mount_point"
      label="t([
  "view.credentials.add-modal.vault_mount_point.label"
])"
    >
      <TextInput
        id="credential-vault-mount-point"
        name="vault_mount_point"
        onChange={[Function]}
        ouiaId="vault_mount_point"
        placeholder="t([
  "view.credentials.add-modal.vault_mount_point.placeholder"
])"
        type="text"
        validated="default"
      />
      <ErrorFragment
        fieldTouched={false}
      />
    </FormGroup>
    <FormGroup
      fieldId="vault_secret_path"
      isRequired={true}
      label="t([
  "view.credentials.add-modal.vault_secret_path.label"
])"
    >
      <TextInput
        id="credential-vault-secret-path"
        isRequired={true}
        name="vault_secret_path"
        onChange={[Function]}
        ouiaId="vault_secret_path"
        placeholder="t([
  "view.credentials.add-modal.vault_secret_path.placeholder"
])"
        type="text"
        validated="default"
      />
      <ErrorFragment
        fieldTouched={false}
      />
    </FormGroup>
    <FormGroup
      fieldId="vault_secret_key"
      isRequired={true}
      label="t([
  "view.credentials.add-modal.vault_secret_key.label"
])"
    >
      <TextInput
        id="credential-vault-key"
        isRequired={true}
        name="vault_secret_key"
        onChange={[Function]}
        ouiaId="vault_secret_key"
        placeholder="t([
  "view.credentials.add-modal.vault_secret_key.placeholder"
])"
        type="text"
        validated="default"
      />
      <ErrorFragment
        fieldTouched={false}
      />
    </FormGroup>
  </React.Fragment>
  <ActionGroup>
    <Button
      isDisabled={true}
      onClick={[Function]}
      variant="primary"
    >
      t([
  "view.credentials.add-modal.actions.save"
])
    </Button>
    <Button
      onClick={[Function]}
      variant="link"
    >
      t([
  "view.credentials.add-modal.actions.cancel"
])
    </Button>
  </ActionGroup>
</Form>
`;

exports[`CredentialForm should submit updated credential data: edit credential form, after 1`] = `
"<form novalidate="" class="pf-v6-c-form"><div class="pf-v6-c-form__group"><div class="pf-v6-c-form__group-label"><label class="pf-v6-c-form__label" for="name"><span class="pf-v6-c-form__label-text">t([
  "view.credentials.add-modal.name.label"
])</span><span class="pf-v6-c-form__label-required" aria-hidden="true">&nbsp;*</span></label>&nbsp;&nbsp;</div><div class="pf-v6-c-form__group-control"><span class="pf-v6-c-form-control"><input id="credential-name" aria-invalid="false" required="" placeholder="t([
  &quot;view.credentials.add-modal.name.placeholder&quot;
])" data-ouia-component-type="PF6/TextInput" data-ouia-safe="true" data-ouia-component-id="cred_name" type="text" value="Test changing name" name="name"></span></div></div><div class="pf-v6-c-form__group"><div class="pf-v6-c-form__group-label"><label class="pf-v6-c-form__label" for="auth_type"><span class="pf-v6-c-form__label-text">t([
  "view.credentials.add-modal.auth_type.label"
])</span></label>&nbsp;&nbsp;</div><div class="pf-v6-c-form__group-control"><button class="pf-v6-c-menu-toggle pf-m-full-width" type="button" aria-label="t([
  &quot;simple-dropdown.aria-label&quot;
])" aria-expanded="false" data-ouia-component-type="PF6/MenuToggle" data-ouia-safe="true" data-ouia-component-id="auth_type"><span class="pf-v6-c-menu-toggle__text">Username and Password</span><span class="pf-v6-c-menu-toggle__controls"><span class="pf-v6-c-menu-toggle__toggle-icon"><svg class="pf-v6-svg" fill="currentColor" aria-hidden="true" role="img" width="1em" height="1em"><svg viewBox="0 0 320 512" class="pf-v6-icon-default"><path d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"></path></svg><svg viewBox="0 0 32 32" class="pf-v6-icon-rh-ui"><path d="M16 24.792c-.384 0-.769-.146-1.061-.438L2.293 11.707a.999.999 0 1 1 1.414-1.414L16 22.586l12.293-12.293a.999.999 0 1 1 1.414 1.414L17.061 24.353a1.497 1.497 0 0 1-1.061.438Z"></path></svg></svg></span></span></button></div></div><div class="pf-v6-c-form__group"><div class="pf-v6-c-form__group-label"><label class="pf-v6-c-form__label" for="username"><span class="pf-v6-c-form__label-text">t([
  "view.credentials.add-modal.username.label"
])</span><span class="pf-v6-c-form__label-required" aria-hidden="true">&nbsp;*</span></label>&nbsp;&nbsp;</div><div class="pf-v6-c-form__group-control"><span class="pf-v6-c-form-control"><input id="credential-username" aria-invalid="false" placeholder="t([
  &quot;view.credentials.add-modal.username.placeholder&quot;
])" data-ouia-component-type="PF6/TextInput" data-ouia-safe="true" data-ouia-component-id="username" type="text" value="discovery" name="username"></span></div></div><div class="pf-v6-c-form__group"><div class="pf-v6-c-form__group-label"><label class="pf-v6-c-form__label" for="password"><span class="pf-v6-c-form__label-text">t([
  "view.credentials.add-modal.password.label"
])</span><span class="pf-v6-c-form__label-required" aria-hidden="true">&nbsp;*</span></label>&nbsp;&nbsp;</div><div class="pf-v6-c-form__group-control"><div class="pf-v6-c-input-group"><div class="pf-v6-c-input-group__item pf-m-fill"><span class="pf-v6-c-form-control pf-m-disabled"><input id="credential-password" aria-invalid="false" disabled="" placeholder="t([
  &quot;secret-input.filled_placeholder&quot;
])" data-ouia-component-type="PF6/TextInput" data-ouia-safe="true" data-ouia-component-id="password" type="text" value="" name="password"></span></div><div class="pf-v6-c-input-group__item"><button class="pf-v6-c-button pf-m-control" type="button" data-ouia-component-type="PF6/Button" data-ouia-safe="true" data-ouia-component-id="secret-edit"><span class="pf-v6-c-button__icon"><svg class="pf-v6-svg" fill="currentColor" aria-hidden="true" role="img" width="1em" height="1em"><svg viewBox="0 0 512 512" class="pf-v6-icon-default"><path d="M497.9 142.1l-46.1 46.1c-4.7 4.7-12.3 4.7-17 0l-111-111c-4.7-4.7-4.7-12.3 0-17l46.1-46.1c18.7-18.7 49.1-18.7 67.9 0l60.1 60.1c18.8 18.7 18.8 49.1 0 67.9zM284.2 99.8L21.6 362.4.4 483.9c-2.9 16.4 11.4 30.6 27.8 27.8l121.5-21.3 262.6-262.6c4.7-4.7 4.7-12.3 0-17l-111-111c-4.8-4.7-12.4-4.7-17.1 0zM124.1 339.9c-5.5-5.5-5.5-14.3 0-19.8l154-154c5.5-5.5 14.3-5.5 19.8 0s5.5 14.3 0 19.8l-154 154c-5.5 5.5-14.3 5.5-19.8 0zM88 424h48v36.3l-64.5 11.3-31.1-31.1L51.7 376H88v48z"></path></svg><svg viewBox="0 0 32 32" class="pf-v6-icon-rh-ui"><path d="m29.354 6.939-4.293-4.293a1.501 1.501 0 0 0-2.121 0L6.293 19.293a.98.98 0 0 0-.225.358l-3.981 8.942c-.004.008-.002.017-.006.025-.029.07-.036.145-.049.22-.009.055-.029.107-.028.162 0 .054.019.107.028.162.013.075.02.15.049.22.003.008.002.017.006.025.044.1.105.188.175.265.013.015.031.025.045.039a.985.985 0 0 0 .246.175c.015.008.025.022.041.029.014.006.029.004.044.009a.994.994 0 0 0 .357.077h.008a.973.973 0 0 0 .357-.077c.014-.006.03-.003.044-.009l8.943-3.982a.98.98 0 0 0 .357-.225l16.65-16.647c.283-.283.439-.66.439-1.061s-.156-.777-.439-1.061ZM4.972 27.027l2.354-5.287 2.933 2.933-5.287 2.354ZM12 23.586 8.414 20 20.5 7.914l3.586 3.586L12 23.586Zm13.5-13.5L21.914 6.5 24 4.414 27.586 8 25.5 10.086Z"></path></svg></svg></span></button></div></div></div></div><div class="pf-v6-c-form__group"><div class="pf-v6-c-form__group-label"><label class="pf-v6-c-form__label" for="become_method"><span class="pf-v6-c-form__label-text">t([
  "view.credentials.add-modal.become_method.label"
])</span></label>&nbsp;&nbsp;</div><div class="pf-v6-c-form__group-control"><button class="pf-v6-c-menu-toggle pf-m-full-width" type="button" aria-label="t([
  &quot;simple-dropdown.aria-label&quot;
])" aria-expanded="false" data-ouia-component-type="PF6/MenuToggle" data-ouia-safe="true" data-ouia-component-id="become_method"><span class="pf-v6-c-menu-toggle__text">t([
  "view.credentials.add-modal.become_method.default_value"
])</span><span class="pf-v6-c-menu-toggle__controls"><span class="pf-v6-c-menu-toggle__toggle-icon"><svg class="pf-v6-svg" fill="currentColor" aria-hidden="true" role="img" width="1em" height="1em"><svg viewBox="0 0 320 512" class="pf-v6-icon-default"><path d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"></path></svg><svg viewBox="0 0 32 32" class="pf-v6-icon-rh-ui"><path d="M16 24.792c-.384 0-.769-.146-1.061-.438L2.293 11.707a.999.999 0 1 1 1.414-1.414L16 22.586l12.293-12.293a.999.999 0 1 1 1.414 1.414L17.061 24.353a1.497 1.497 0 0 1-1.061.438Z"></path></svg></svg></span></span></button></div></div><div class="pf-v6-c-form__group"><div class="pf-v6-c-form__group-label"><label class="pf-v6-c-form__label" for="become_user"><span class="pf-v6-c-form__label-text">t([
  "view.credentials.add-modal.become_user.label"
])</span></label>&nbsp;&nbsp;</div><div class="pf-v6-c-form__group-control"><span class="pf-v6-c-form-control"><input id="become_user" aria-invalid="false" placeholder="t([
  &quot;view.credentials.add-modal.become_user.placeholder&quot;
])" data-ouia-component-type="PF6/TextInput" data-ouia-safe="true" data-ouia-component-id="become_user" type="text" value="" name="become_user"></span></div></div><div class="pf-v6-c-form__group"><div class="pf-v6-c-form__group-label"><label class="pf-v6-c-form__label" for="become_password"><span class="pf-v6-c-form__label-text">t([
  "view.credentials.add-modal.become_password.label"
])</span></label>&nbsp;&nbsp;</div><div class="pf-v6-c-form__group-control"><div class="pf-v6-c-input-group"><div class="pf-v6-c-input-group__item pf-m-fill"><span class="pf-v6-c-form-control"><input id="become_password" aria-invalid="false" placeholder="t([
  &quot;view.credentials.add-modal.become_password.placeholder&quot;
])" data-ouia-component-type="PF6/TextInput" data-ouia-safe="true" data-ouia-component-id="become_password" type="password" value="" name="become_password"></span></div></div></div></div><div class="pf-v6-c-form__group pf-m-action"><div class="pf-v6-c-form__group-control"><div class="pf-v6-c-form__actions"><button class="pf-v6-c-button pf-m-primary" type="button" data-ouia-component-type="PF6/Button" data-ouia-safe="true" data-ouia-component-id="OUIA-Generated-Button-primary-_r_7s_"><span class="pf-v6-c-button__text">t([
  "view.credentials.add-modal.actions.save"
])</span></button><button class="pf-v6-c-button pf-m-link" type="button" data-ouia-component-type="PF6/Button" data-ouia-safe="true" data-ouia-component-id="OUIA-Generated-Button-link-_r_7t_"><span class="pf-v6-c-button__text">t([
  "view.credentials.add-modal.actions.cancel"
])</span></button></div></div></div></form>"
`;

exports[`CredentialForm should work with default onClose: onClose 1`] = `
"<form novalidate="" class="pf-v6-c-form"><div class="pf-v6-c-form__group"><div class="pf-v6-c-form__group-label"><label class="pf-v6-c-form__label" for="name"><span class="pf-v6-c-form__label-text">t([
  "view.credentials.add-modal.name.label"
])</span><span class="pf-v6-c-form__label-required" aria-hidden="true">&nbsp;*</span></label>&nbsp;&nbsp;</div><div class="pf-v6-c-form__group-control"><span class="pf-v6-c-form-control"><input id="credential-name" aria-invalid="false" required="" placeholder="t([
  &quot;view.credentials.add-modal.name.placeholder&quot;
])" data-ouia-component-type="PF6/TextInput" data-ouia-safe="true" data-ouia-component-id="cred_name" type="text" value="" name="name"></span></div></div><div class="pf-v6-c-form__group"><div class="pf-v6-c-form__group-label"><label class="pf-v6-c-form__label" for="auth_type"><span class="pf-v6-c-form__label-text">t([
  "view.credentials.add-modal.auth_type.label"
])</span></label>&nbsp;&nbsp;</div><div class="pf-v6-c-form__group-control"><button class="pf-v6-c-menu-toggle pf-m-full-width" type="button" aria-label="t([
  &quot;simple-dropdown.aria-label&quot;
])" aria-expanded="false" data-ouia-component-type="PF6/MenuToggle" data-ouia-safe="true" data-ouia-component-id="auth_type"><span class="pf-v6-c-menu-toggle__text">Username and Password</span><span class="pf-v6-c-menu-toggle__controls"><span class="pf-v6-c-menu-toggle__toggle-icon"><svg class="pf-v6-svg" fill="currentColor" aria-hidden="true" role="img" width="1em" height="1em"><svg viewBox="0 0 320 512" class="pf-v6-icon-default"><path d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"></path></svg><svg viewBox="0 0 32 32" class="pf-v6-icon-rh-ui"><path d="M16 24.792c-.384 0-.769-.146-1.061-.438L2.293 11.707a.999.999 0 1 1 1.414-1.414L16 22.586l12.293-12.293a.999.999 0 1 1 1.414 1.414L17.061 24.353a1.497 1.497 0 0 1-1.061.438Z"></path></svg></svg></span></span></button></div></div><div class="pf-v6-c-form__group"><div class="pf-v6-c-form__group-label"><label class="pf-v6-c-form__label" for="username"><span class="pf-v6-c-form__label-text">t([
  "view.credentials.add-modal.username.label"
])</span><span class="pf-v6-c-form__label-required" aria-hidden="true">&nbsp;*</span></label>&nbsp;&nbsp;</div><div class="pf-v6-c-form__group-control"><span class="pf-v6-c-form-control"><input id="credential-username" aria-invalid="false" required="" placeholder="t([
  &quot;view.credentials.add-modal.username.placeholder&quot;
])" data-ouia-component-type="PF6/TextInput" data-ouia-safe="true" data-ouia-component-id="username" type="text" value="" name="username"></span></div></div><div class="pf-v6-c-form__group"><div class="pf-v6-c-form__group-label"><label class="pf-v6-c-form__label" for="password"><span class="pf-v6-c-form__label-text">t([
  "view.credentials.add-modal.password.label"
])</span><span class="pf-v6-c-form__label-required" aria-hidden="true">&nbsp;*</span></label>&nbsp;&nbsp;</div><div class="pf-v6-c-form__group-control"><div class="pf-v6-c-input-group"><div class="pf-v6-c-input-group__item pf-m-fill"><span class="pf-v6-c-form-control"><input id="credential-password" aria-invalid="false" required="" placeholder="t([
  &quot;view.credentials.add-modal.password.placeholder&quot;
])" data-ouia-component-type="PF6/TextInput" data-ouia-safe="true" data-ouia-component-id="password" type="password" value="" name="password"></span></div></div></div></div><div class="pf-v6-c-form__group"><div class="pf-v6-c-form__group-label"><label class="pf-v6-c-form__label" for="become_method"><span class="pf-v6-c-form__label-text">t([
  "view.credentials.add-modal.become_method.label"
])</span></label>&nbsp;&nbsp;</div><div class="pf-v6-c-form__group-control"><button class="pf-v6-c-menu-toggle pf-m-full-width" type="button" aria-label="t([
  &quot;simple-dropdown.aria-label&quot;
])" aria-expanded="false" data-ouia-component-type="PF6/MenuToggle" data-ouia-safe="true" data-ouia-component-id="become_method"><span class="pf-v6-c-menu-toggle__text">t([
  "view.credentials.add-modal.become_method.default_value"
])</span><span class="pf-v6-c-menu-toggle__controls"><span class="pf-v6-c-menu-toggle__toggle-icon"><svg class="pf-v6-svg" fill="currentColor" aria-hidden="true" role="img" width="1em" height="1em"><svg viewBox="0 0 320 512" class="pf-v6-icon-default"><path d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"></path></svg><svg viewBox="0 0 32 32" class="pf-v6-icon-rh-ui"><path d="M16 24.792c-.384 0-.769-.146-1.061-.438L2.293 11.707a.999.999 0 1 1 1.414-1.414L16 22.586l12.293-12.293a.999.999 0 1 1 1.414 1.414L17.061 24.353a1.497 1.497 0 0 1-1.061.438Z"></path></svg></svg></span></span></button></div></div><div class="pf-v6-c-form__group"><div class="pf-v6-c-form__group-label"><label class="pf-v6-c-form__label" for="become_user"><span class="pf-v6-c-form__label-text">t([
  "view.credentials.add-modal.become_user.label"
])</span></label>&nbsp;&nbsp;</div><div class="pf-v6-c-form__group-control"><span class="pf-v6-c-form-control"><input id="become_user" aria-invalid="false" placeholder="t([
  &quot;view.credentials.add-modal.become_user.placeholder&quot;
])" data-ouia-component-type="PF6/TextInput" data-ouia-safe="true" data-ouia-component-id="become_user" type="text" name="become_user"></span></div></div><div class="pf-v6-c-form__group"><div class="pf-v6-c-form__group-label"><label class="pf-v6-c-form__label" for="become_password"><span class="pf-v6-c-form__label-text">t([
  "view.credentials.add-modal.become_password.label"
])</span></label>&nbsp;&nbsp;</div><div class="pf-v6-c-form__group-control"><div class="pf-v6-c-input-group"><div class="pf-v6-c-input-group__item pf-m-fill"><span class="pf-v6-c-form-control"><input id="become_password" aria-invalid="false" placeholder="t([
  &quot;view.credentials.add-modal.become_password.placeholder&quot;
])" data-ouia-component-type="PF6/TextInput" data-ouia-safe="true" data-ouia-component-id="become_password" type="password" name="become_password"></span></div></div></div></div><div class="pf-v6-c-form__group pf-m-action"><div class="pf-v6-c-form__group-control"><div class="pf-v6-c-form__actions"><button class="pf-v6-c-button pf-m-primary" type="button" data-ouia-component-type="PF6/Button" data-ouia-safe="true" data-ouia-component-id="OUIA-Generated-Button-primary-_r_6c_"><span class="pf-v6-c-button__text">t([
  "view.credentials.add-modal.actions.save"
])</span></button><button class="pf-v6-c-button pf-m-link" type="button" data-ouia-component-type="PF6/Button" data-ouia-safe="true" data-ouia-component-id="OUIA-Generated-Button-link-_r_6d_"><span class="pf-v6-c-button__text">t([
  "view.credentials.add-modal.actions.cancel"
])</span></button></div></div></div></form>"
`;

exports[`CredentialForm should work with default onSubmit: onSave 1`] = `
"<form novalidate="" class="pf-v6-c-form"><div class="pf-v6-c-form__group"><div class="pf-v6-c-form__group-label"><label class="pf-v6-c-form__label" for="name"><span class="pf-v6-c-form__label-text">t([
  "view.credentials.add-modal.name.label"
])</span><span class="pf-v6-c-form__label-required" aria-hidden="true">&nbsp;*</span></label>&nbsp;&nbsp;</div><div class="pf-v6-c-form__group-control"><span class="pf-v6-c-form-control"><input id="credential-name" aria-invalid="false" required="" placeholder="t([
  &quot;view.credentials.add-modal.name.placeholder&quot;
])" data-ouia-component-type="PF6/TextInput" data-ouia-safe="true" data-ouia-component-id="cred_name" type="text" value="" name="name"></span></div></div><div class="pf-v6-c-form__group"><div class="pf-v6-c-form__group-label"><label class="pf-v6-c-form__label" for="auth_type"><span class="pf-v6-c-form__label-text">t([
  "view.credentials.add-modal.auth_type.label"
])</span></label>&nbsp;&nbsp;</div><div class="pf-v6-c-form__group-control"><button class="pf-v6-c-menu-toggle pf-m-full-width" type="button" aria-label="t([
  &quot;simple-dropdown.aria-label&quot;
])" aria-expanded="false" data-ouia-component-type="PF6/MenuToggle" data-ouia-safe="true" data-ouia-component-id="auth_type"><span class="pf-v6-c-menu-toggle__text">Username and Password</span><span class="pf-v6-c-menu-toggle__controls"><span class="pf-v6-c-menu-toggle__toggle-icon"><svg class="pf-v6-svg" fill="currentColor" aria-hidden="true" role="img" width="1em" height="1em"><svg viewBox="0 0 320 512" class="pf-v6-icon-default"><path d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"></path></svg><svg viewBox="0 0 32 32" class="pf-v6-icon-rh-ui"><path d="M16 24.792c-.384 0-.769-.146-1.061-.438L2.293 11.707a.999.999 0 1 1 1.414-1.414L16 22.586l12.293-12.293a.999.999 0 1 1 1.414 1.414L17.061 24.353a1.497 1.497 0 0 1-1.061.438Z"></path></svg></svg></span></span></button></div></div><div class="pf-v6-c-form__group"><div class="pf-v6-c-form__group-label"><label class="pf-v6-c-form__label" for="username"><span class="pf-v6-c-form__label-text">t([
  "view.credentials.add-modal.username.label"
])</span><span class="pf-v6-c-form__label-required" aria-hidden="true">&nbsp;*</span></label>&nbsp;&nbsp;</div><div class="pf-v6-c-form__group-control"><span class="pf-v6-c-form-control"><input id="credential-username" aria-invalid="false" required="" placeholder="t([
  &quot;view.credentials.add-modal.username.placeholder&quot;
])" data-ouia-component-type="PF6/TextInput" data-ouia-safe="true" data-ouia-component-id="username" type="text" value="" name="username"></span></div></div><div class="pf-v6-c-form__group"><div class="pf-v6-c-form__group-label"><label class="pf-v6-c-form__label" for="password"><span class="pf-v6-c-form__label-text">t([
  "view.credentials.add-modal.password.label"
])</span><span class="pf-v6-c-form__label-required" aria-hidden="true">&nbsp;*</span></label>&nbsp;&nbsp;</div><div class="pf-v6-c-form__group-control"><div class="pf-v6-c-input-group"><div class="pf-v6-c-input-group__item pf-m-fill"><span class="pf-v6-c-form-control"><input id="credential-password" aria-invalid="false" required="" placeholder="t([
  &quot;view.credentials.add-modal.password.placeholder&quot;
])" data-ouia-component-type="PF6/TextInput" data-ouia-safe="true" data-ouia-component-id="password" type="password" value="" name="password"></span></div></div></div></div><div class="pf-v6-c-form__group"><div class="pf-v6-c-form__group-label"><label class="pf-v6-c-form__label" for="become_method"><span class="pf-v6-c-form__label-text">t([
  "view.credentials.add-modal.become_method.label"
])</span></label>&nbsp;&nbsp;</div><div class="pf-v6-c-form__group-control"><button class="pf-v6-c-menu-toggle pf-m-full-width" type="button" aria-label="t([
  &quot;simple-dropdown.aria-label&quot;
])" aria-expanded="false" data-ouia-component-type="PF6/MenuToggle" data-ouia-safe="true" data-ouia-component-id="become_method"><span class="pf-v6-c-menu-toggle__text">t([
  "view.credentials.add-modal.become_method.default_value"
])</span><span class="pf-v6-c-menu-toggle__controls"><span class="pf-v6-c-menu-toggle__toggle-icon"><svg class="pf-v6-svg" fill="currentColor" aria-hidden="true" role="img" width="1em" height="1em"><svg viewBox="0 0 320 512" class="pf-v6-icon-default"><path d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"></path></svg><svg viewBox="0 0 32 32" class="pf-v6-icon-rh-ui"><path d="M16 24.792c-.384 0-.769-.146-1.061-.438L2.293 11.707a.999.999 0 1 1 1.414-1.414L16 22.586l12.293-12.293a.999.999 0 1 1 1.414 1.414L17.061 24.353a1.497 1.497 0 0 1-1.061.438Z"></path></svg></svg></span></span></button></div></div><div class="pf-v6-c-form__group"><div class="pf-v6-c-form__group-label"><label class="pf-v6-c-form__label" for="become_user"><span class="pf-v6-c-form__label-text">t([
  "view.credentials.add-modal.become_user.label"
])</span></label>&nbsp;&nbsp;</div><div class="pf-v6-c-form__group-control"><span class="pf-v6-c-form-control"><input id="become_user" aria-invalid="false" placeholder="t([
  &quot;view.credentials.add-modal.become_user.placeholder&quot;
])" data-ouia-component-type="PF6/TextInput" data-ouia-safe="true" data-ouia-component-id="become_user" type="text" name="become_user"></span></div></div><div class="pf-v6-c-form__group"><div class="pf-v6-c-form__group-label"><label class="pf-v6-c-form__label" for="become_password"><span class="pf-v6-c-form__label-text">t([
  "view.credentials.add-modal.become_password.label"
])</span></label>&nbsp;&nbsp;</div><div class="pf-v6-c-form__group-control"><div class="pf-v6-c-input-group"><div class="pf-v6-c-input-group__item pf-m-fill"><span class="pf-v6-c-form-control"><input id="become_password" aria-invalid="false" placeholder="t([
  &quot;view.credentials.add-modal.become_password.placeholder&quot;
])" data-ouia-component-type="PF6/TextInput" data-ouia-safe="true" data-ouia-component-id="become_password" type="password" name="become_password"></span></div></div></div></div><div class="pf-v6-c-form__group pf-m-action"><div class="pf-v6-c-form__group-control"><div class="pf-v6-c-form__actions"><button class="pf-v6-c-button pf-m-primary" type="button" data-ouia-component-type="PF6/Button" data-ouia-safe="true" data-ouia-component-id="OUIA-Generated-Button-primary-_r_77_"><span class="pf-v6-c-button__text">t([
  "view.credentials.add-modal.actions.save"
])</span></button><button class="pf-v6-c-button pf-m-link" type="button" data-ouia-component-type="PF6/Button" data-ouia-safe="true" data-ouia-component-id="OUIA-Generated-Button-link-_r_78_"><span class="pf-v6-c-button__text">t([
  "view.credentials.add-modal.actions.cancel"
])</span></button></div></div></div></form>"
`;

exports[`CredentialForm — Vault auth disabled without global Vault config should render Ansible auth menu with Vault secret path disabled: ansible, auth menu open, vault disabled 1`] = `"<ul role="menu" class="pf-v6-c-menu__list"><li class="pf-v6-c-menu__list-item" role="none" data-ouia-component-type="PF6/DropdownItem" data-ouia-safe="true" data-ouia-component-id="password"><button tabindex="0" class="pf-v6-c-menu__item" role="menuitem" type="button"><span class="pf-v6-c-menu__item-main"><span class="pf-v6-c-menu__item-text">Username and Password</span></span></button></li><li class="pf-v6-c-menu__list-item pf-m-aria-disabled" role="none" data-ouia-component-type="PF6/DropdownItem" data-ouia-safe="true" data-ouia-component-id="vault_secret_path"><button tabindex="-1" class="pf-v6-c-menu__item" role="menuitem" type="button" aria-disabled="true"><span class="pf-v6-c-menu__item-main"><span class="pf-v6-c-menu__item-text">Vault secret path</span></span></button></li></ul>"`;

exports[`CredentialForm — Vault auth disabled without global Vault config should render OpenShift auth menu with Vault secret path disabled: openshift, auth menu open, vault disabled 1`] = `"<ul role="menu" class="pf-v6-c-menu__list"><li class="pf-v6-c-menu__list-item" role="none" data-ouia-component-type="PF6/DropdownItem" data-ouia-safe="true" data-ouia-component-id="auth_token"><button tabindex="0" class="pf-v6-c-menu__item" role="menuitem" type="button"><span class="pf-v6-c-menu__item-main"><span class="pf-v6-c-menu__item-text">Token</span></span></button></li><li class="pf-v6-c-menu__list-item" role="none" data-ouia-component-type="PF6/DropdownItem" data-ouia-safe="true" data-ouia-component-id="password"><button tabindex="-1" class="pf-v6-c-menu__item" role="menuitem" type="button"><span class="pf-v6-c-menu__item-main"><span class="pf-v6-c-menu__item-text">Username and Password</span></span></button></li><li class="pf-v6-c-menu__list-item pf-m-aria-disabled" role="none" data-ouia-component-type="PF6/DropdownItem" data-ouia-safe="true" data-ouia-component-id="vault_secret_path"><button tabindex="-1" class="pf-v6-c-menu__item" role="menuitem" type="button" aria-disabled="true"><span class="pf-v6-c-menu__item-main"><span class="pf-v6-c-menu__item-text">Vault secret path</span></span></button></li></ul>"`;

exports[`CredentialForm — Vault auth disabled without global Vault config should submit Ansible username and password when Vault is disabled: ansible password submit, vault not configured 1`] = `
{
  "authenticationType": "",
  "become_method": "",
  "become_user": "",
  "cred_type": "ansible",
  "name": "aap-cred",
  "password": "<redacted>",
  "username": "svc-user",
}
`;

exports[`CredentialForm — Vault auth disabled without global Vault config should submit OpenShift Token credential when Vault is disabled: openshift token submit, vault not configured 1`] = `
{
  "auth_token": "<redacted>",
  "authenticationType": "",
  "become_method": "",
  "become_user": "",
  "cred_type": "openshift",
  "name": "ocp-cred",
  "username": "",
}
`;

exports[`getCleanedFormData should clean formData correctly for different authTypes: SSH Key" auth cleanedData " 1`] = `
{
  "auth_token": "test_token",
  "name": "Test Credential",
  "ssh_key": "test_ssh_key",
  "ssh_passphrase": "test_passphrase",
  "username": "test_user",
}
`;

exports[`getCleanedFormData should clean formData correctly for different authTypes: Token" auth cleanedData " 1`] = `
{
  "auth_token": "test_token",
  "name": "Test Credential",
  "ssh_key": "test_ssh_key",
  "ssh_passphrase": "test_passphrase",
  "username": "",
}
`;

exports[`getCleanedFormData should clean formData correctly for different authTypes: Username and Password" auth cleanedData " 1`] = `
{
  "name": "Test Credential",
  "password": "test_password",
  "username": "test_user",
}
`;

exports[`useCredentialForm should allow editing a credential: formData, edit 1`] = `
{
  "auth_token": "",
  "become_method": "",
  "become_password": "",
  "become_user": "",
  "name": "lorem",
  "password": "",
  "ssh_key": "",
  "ssh_passphrase": "",
  "username": "",
  "vault_mount_point": "",
  "vault_secret_key": "",
  "vault_secret_path": "",
}
`;

exports[`useCredentialForm should derive token auth for specific credential types: token auth 1`] = `
{
  "openshift": "Token",
  "rhacs": "Token",
}
`;

exports[`useCredentialForm should derive username + password for specific credential types: username and password 1`] = `
{
  "ansible": "Username and Password",
  "network": "Username and Password",
  "satellite": "Username and Password",
  "vcenter": "Username and Password",
}
`;

exports[`useCredentialForm should initialize formData correctly: formData 1`] = `
{
  "auth_token": "",
  "authenticationType": "",
  "become_method": "",
  "become_password": "",
  "become_user": "",
  "name": "",
  "password": "",
  "ssh_key": "",
  "ssh_passphrase": "",
  "username": "",
  "vault_mount_point": "",
  "vault_secret_key": "",
  "vault_secret_path": "",
}
`;

exports[`useCredentialForm should support implausible case of credential without a name: formData no name, edit 1`] = `
{
  "auth_token": "",
  "become_method": "",
  "become_password": "",
  "become_user": "",
  "name": "",
  "password": "",
  "ssh_key": "",
  "ssh_passphrase": "",
  "username": "",
  "vault_mount_point": "",
  "vault_secret_key": "",
  "vault_secret_path": "",
}
`;

exports[`useCredentialForm should work without formData: emptyFormData 1`] = `
{
  "auth_token": "",
  "authenticationType": "",
  "become_method": "",
  "become_password": "",
  "become_user": "",
  "name": "",
  "password": "",
  "ssh_key": "",
  "ssh_passphrase": "",
  "username": "",
  "vault_mount_point": "",
  "vault_secret_key": "",
  "vault_secret_path": "",
}
`;
